# iot-esp32-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml  genssl.sh
.cargo/: config.toml
docs/: arbejds-portfolio.typst  logbog.typst
mosquitto/certs/: ca.crt.rsa  ca.key.rsa  generate-certs.sh  server.crt.rsa  server.key.rsa
mosquitto/config/: mosquitto.conf
src/: button.rs  deep_sleep.rs  led.rs  lib.rs  mqtt.rs  ntp.rs  wifi.rs
